[package]
name = "ads"
version = "0.1.0"
authors = ["Anton Troskie <troskie.a@gmail.com>"]
edition = "2018"

[dependencies]
sha2 = "0.9.8"
digest = "0.9.0"
bitvec = "1.0.1"
rand = "0.8.4"
serde_json = "1.0.111"
serde = { version = "1.0.111", features = ["derive"] }
hex = "0.4.3"

[dev-dependencies]
quickcheck = "1"
quickcheck_macros = "1"

